--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
   <title>Welcome to OpenShift, builds 20 Apr 2017</title>
 </head>
 <body>
-<h1>Hello, OpenShift.</h1>
+<h1>Hello, OpenShift, builds 20 Apr 2017</h1>
 </body>
 </html>
